# dsf-iot-demo

device/: Cargo.toml  Makefile  README.md  memory.x
device/.cargo/: config.toml
device/src/: bench.rs  common.rs  newlib.rs  pub.rs  serial_log.rs  sub.rs  timer.rs
gateway/: .envrc  Cargo.toml
gateway/.cargo/: config.toml
gateway/src/: main.rs
sensor/: .envrc  .gitignore  Cargo.toml  Makefile
sensor/.cargo/: config.toml
sensor/src/: common.rs  pub.rs  serial_log.rs  sub.rs  timer.rs
