cargo-features = ["per-package-target"]

[package]
authors = ["ryan <ryan@kurte.nz>"]
edition = "2021"
readme = "README.md"
name = "dsf-iot-device"
version = "0.1.0"
publish = false

forced-target = "thumbv7em-none-eabihf"

[package.metadata]
chip = "STM32F429ZITx"

[features]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

gfsk = []

default = [
    "defmt-default",
    "defmt-debug",
    "defmt",
    "defmt-rtt",
    "gfsk"
]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
alloc-cortex-m = "0.4.0"
nb = "0.1.2"
log = "0.4.8"
cty = "0.2.1"
rand_core = "0.6.4"
rand_chacha = { version = "0.3.1", default-features = false }
num-traits = { version = "0.2.12", default-features = false }
byteorder = { version = "1.4.3", default-features = false }

arrayvec = { version = "*", default-features = false }
bytes = { version = "*", default-features = false }

defmt = { version = "0.3.5", optional = true, features = [ "alloc" ] }
defmt-rtt = { version = "0.4.0", optional = true }
strum_macros = "0.20.1"
heapless = "0.7.10"
stor = "0.1.0"
getrandom = { version = "*", default_features = false, features = [ "custom" ] }

embedded-hal = "1.0.0"
embedded-serial = "*"
embedded-hal-bus = "*"
#embedded-hal-compat = "0.12.0"
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f429", "usb_fs"] }
bme280 = "0.5.0"

radio = "0.12.1"
radio-sx128x = { version = "0.19.0", default-features = false }
ieee802154 = "0.3.0"
lpwan = { version = "0.1.0", default-features = false }

display-interface = "0.5.0"
display-interface-i2c = "0.5.0"
embedded-graphics = "0.8.1"
embedded-text = { version = "0.7.0", default-features = false }
ssd1306 = "0.8.4"

dsf-core = { version = "*", default-features = false, features = [ "alloc" ] }
dsf-iot = { version = "*", default-features = false, features = [ "alloc" ] }
dsf-engine = { version = "*", default-features = false, features = [ "alloc" ] }

[[bin]]
name = "dsf-pub"
path = "src/pub.rs"
test = false
bench = false

[[bin]]
name = "dsf-sub"
path = "src/sub.rs"
test = false
bench = false

[[bin]]
name = "dsf-bench"
path = "src/bench.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2

[profile.release]
codegen-units = 1
debug = 2
panic = "abort"
#lto = true


[patch.crates-io]

bme280 = { git = "https://github.com/ryankurte/bme280-rs", branch = "embedded-hal-v1.0.0-alpha" }

# Patch dsf crates to sync sub-dependencies
dsf-core = { path = "../../dsf/core" }
dsf-engine = { path = "../../dsf/engine" }
dsf-iot = { path = "../../dsf-iot" }

lpwan = { git = "https://github.com/rust-iot/rust-lpwan", branch = "main" }
ieee802154 = { git = "https://github.com/ryankurte/rust-ieee802.15.4", branch = "feature/802.15.4-2015-simple" }
